applications/echo/componenets/echo/overlays/prod/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo2
spec:
  tls:
    - hosts:
        - echo.c2.zem.org.uk
      secretName: ingress-echo-tls
  ingressClassName: nginx
  rules:
    - host: "echo.c2.zem.org.uk"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 8000
